--- a/src/Home.css
+++ b/src/Home.css
@@ -1,3 +1,4 @@
+
 .header{
     width: 100%;
     height: 400px;
@@ -30,7 +31,7 @@
 .chooser{
     text-align: center;
     margin-top: 50px;
-    margin-left: 450px;
+    margin-left: 454px;
     text-decoration: none;
     font-size: 30px;
     color: rgb(73, 73, 73);
@@ -84,4 +85,73 @@ li{
 .choose-lable{
     padding-top: 20px;
 }
+
+.pannel-body{
+    width: 27%;
+    border-style: groove;
+    border-radius: 30px;
+    height: 150px;
+    margin: auto;
+    margin-top: -140px;
+
+
+}
+
+.pannel-title{
+    color: rgb(240, 236, 236);
+    margin-left: 15px;
+    padding-top: 10px;
+    font-size: 40px;
+}
+
+.anim-table{
+    margin-left: 120px;
+    
+       
+}
+
+.card-1{
+    width: 120px;
+    display: grid;
+    height: 60px;
+    border-radius: 18px;
+    box-shadow: 5px 5px 15px black;
+    text-align: center;
+    background-color: rgba(10, 64, 66);
+    color: blanchedalmond;
+    transition: 0.5s;
+    margin-left: -55px;
+    margin-top: 45px;
+}
+
+
+.card-1:hover{
+    transform: scale(1.1);
+    box-shadow: 5px 5px 15px black;
+    background-color: rgb(19, 114, 117);
+}
+
+
+.card-2{
+    width: 120px;
+    display: grid;
+    height: 60px;
+    border-radius: 18px;
+    box-shadow: 5px 5px 15px black;
+    text-align: center;
+    background-color: rgba(10, 64, 66);
+    color: blanchedalmond;
+    transition: 0.5s;
+    margin-top: 45px;
+    margin-left: 26px;
+}
+
+.card-2:hover{
+    transform: scale(1.1);
+    box-shadow: 5px 5px 15px black;
+    background-color: rgb(19, 114, 117);
+}
+
+
+
 
